- Fix luck calculation for Koto in miner_stats.html - Fix memory usage of stats/worker page

--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -126,6 +126,8 @@
 <script>
     $(function() {
         statsSource.addEventListener('message', function (e) {
+            if (document.hidden) return;
+            
             var stats = JSON.parse(e.data);
             for (algo in stats.algos) {
                 $('#statsMiners' + algo).text(stats.algos[algo].workers);
